# digichain

./: Cargo.toml  build.sh
src/: acccount.rs  block.rs  constants.rs  crosschain.rs  digichain.rs  digicoin.rs  json_rpc.rs  lib.rs  main.rs  mempool.rs  proposal.rs  token.rs  transaction.rs  types.rs  utils.rs  validators.rs
