[package]
name = "digichain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[features]
backtraces = []


[profile.release]
rpath = false
lto = true
overflow-checks = false
opt-level = 3
debug = false
debug-assertions = false

[profile.dev]
overflow-checks = false
lto = false
opt-level = 0
debug = true
