[package]
name = "digichain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = { version = "0.5.1", features = [
    "universal-hash",
    "digest",
    "signature",
    "password-hash",
    "cipher",
    "elliptic-curve",
    "aead",
] }
uuid = { version = "1.5.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
router-wasm-bindings = { version = "0.3.0", default-features = false, features = [
    "ethabi",
] }
schemars = "0.8.8"
thiserror = "1.0.26"
sha2 = "0.10.8"
time = "0.3.30"
jsonrpc-http-server = "18.0.0"
serde_json = "1.0.108"
tokio = "1.34.0"
actix-web = "4.4.0"
jsonrpc = "0.16.0"
env_logger = "0.10.1"
rand = "0.8.5"
dotenv = "0.15.0"
num-bigint = "0.4.4"
ethereum-types = "0.14.1"
ethers = "2.0.11"
ethers-signers = "2.0.11"
hex = "0.4.3"
nanoid = "0.4.0"
sha256 = "1.4.0"
qrcode = "0.12.0"
svg = "0.14.0"
base64 = "0.21.5"
cosmwasm-std = "1.5.0"


[features]
backtraces = []


[profile.release]
rpath = false
lto = true
overflow-checks = false
opt-level = 3
debug = false
debug-assertions = false

[profile.dev]
overflow-checks = false
lto = false
opt-level = 0
debug = true
